--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "admin-management-be",
+    "name": "shop-acc-be",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "tsc",
-        "start": "node -r tsconfig-paths/register dist/index.js",
+        "build": "tsc --project tsconfig.json",
+        "start": "node dist/index.js",
         "dev": "nodemon --watch src --ext ts --exec ts-node -r tsconfig-paths/register src/index.ts"
     },
     "author": "",
@@ -16,6 +16,7 @@
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "jsonwebtoken": "8.5.1",
+        "module-alias": "^2.2.3",
         "mysql2": "^3.12.0",
         "tsconfig-paths": "^4.2.0"
     },
@@ -27,5 +28,8 @@
         "nodemon": "^3.1.9",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.7.3"
+    },
+    "_moduleAliases": {
+        "@": "./dist"
     }
 }
