--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 
 
+DATABASE_URL = "103.56.163.248"
+DATABASE_PORT = 3306
+DATABASE_NAME = "shop_acc"
+DATABASE_USER = "root"
+DATABASE_PASSWORD = ""
+
 
 PORT = 3100
